test/types/cptr/c_ptrTo_domain.4.good
c_ptrTo_domain.chpl:11: error: c_addrOfConst domain type not supported
